--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "lint": "./node_modules/.bin/eslint . --ext .js",
+    "fmt": "prettier --write .",
     "electron-dev": "electron ."
   },
   "eslintConfig": {
