--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,6 @@
   "rules": {
     "eqeqeq": ["error", "always"],
     "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off",
+    "react/react-in-jsx-scope": "off"
   }
 }
