--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   ],
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.4",
