--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "electron": "^16.0.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3"
   },
