--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "socket.io-client": "^4.4.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
