--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "sass": "^1.45.1",
     "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2"
