--- a/package.json
+++ b/package.json
@@ -42,12 +42,15 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "sass": "^1.45.1",
+    "serve": "^13.0.2",
     "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "heroku-postbuild": "npm run build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
