--- a/package.json
+++ b/package.json
@@ -30,11 +30,7 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.4",
     "@mui/styled-engine-sc": "^5.1.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "msw": "^0.36.3",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -57,8 +53,7 @@
     "test": "react-scripts test --verbose --coverage",
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/eslint . --ext .js",
-    "fmt": "prettier --write .",
-    "electron-dev": "electron ."
+    "fmt": "prettier --write ."
   },
   "eslintConfig": {
     "extends": [
@@ -79,11 +74,14 @@
     ]
   },
   "devDependencies": {
-    "electron": "^16.0.5",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.27.1",
     "jest": "^27.4.5",
+    "msw": "^0.36.3",
     "prettier": "^2.5.1"
   }
 }
