--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
     "@mui/lab": "^5.0.0-alpha.61",
     "@mui/material": "^5.2.4",
     "@mui/styled-engine-sc": "^5.1.0",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
     "axios": "^0.24.0",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
@@ -43,6 +47,7 @@
     "socket.io-client": "^4.4.0",
     "styled-components": "^5.3.3",
     "sweetalert": "^2.1.2",
+    "typescript": "^4.5.5",
     "use-state-if-mounted": "^1.0.4"
   },
   "scripts": {
