--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.22",
+    "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "axios": "^0.24.0",
     "node-sass": "^7.0.0",
     "react": "^17.0.2",
