--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
   },
   "rules": {
     "eqeqeq": ["error", "always"],
+    "no-unused-vars": "off",
+    "no-undef": "off",
     "react/prop-types": "off",
     "react/react-in-jsx-scope": "off"
   }
