--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@mui/material": "^5.2.4",
     "@mui/styled-engine-sc": "^5.1.0",
     "@types/jest": "^27.4.0",
+    "@types/material-ui": "^0.21.12",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
