--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "resize-observer-polyfill": "^1.5.1",
     "sass": "^1.45.1",
     "serve": "^13.0.2",
     "socket.io-client": "^4.4.0",
